--- a/test/src/main/java/uks/fulibgen/shop/someservice/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/someservice/classModel.yaml
@@ -142,8 +142,8 @@ Logger.getGlobal().info(\"someservice service is up and running on port \" + por
    String events = Yaml.encode(getHistory().values().toArray());
    String objects = Yaml.encode(model.getModelMap().values().toArray());
    return \"<p id='someservice'>This is the someservice service. </p>\n\" +
-         \"<pre>\" + events + \"</pre>\n\" +
-         \"<pre>\" + objects + \"</pre>\n\" +
+         \"<pre id=\\"history\\">\" + events + \"</pre>\n\" +
+         \"<pre id=\\"data\\">\" + objects + \"</pre>\n\" +
          \"\";
 }
 catch (Exception e) {
