--- a/test/src/main/java/uks/debuggen/shop/someservice/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/someservice/classModel.yaml
@@ -142,8 +142,8 @@ Logger.getGlobal().info(\"someservice service is up and running on port \" + por
    String events = Yaml.encode(getHistory().values().toArray());
    String objects = Yaml.encode(model.getModelMap().values().toArray());
    return \"<p id='someservice'>This is the someservice service. </p>\n\" +
-         \"<pre>\" + events + \"</pre>\n\" +
-         \"<pre>\" + objects + \"</pre>\n\" +
+         \"<pre id=\\"history\\">\" + events + \"</pre>\n\" +
+         \"<pre id=\\"data\\">\" + objects + \"</pre>\n\" +
          \"\";
 }
 catch (Exception e) {
@@ -168,13 +168,11 @@ catch (Exception e) {
 String json = Yaml.encode(serviceSubscribed);
 try {
    String url = \"http://localhost:42000/subscribe\";
-   Logger.getGlobal().info(\"Connecting to \" + url);
    HttpResponse<String> response = Unirest
          .post(url)
          .body(json)
          .asString();
    String body = response.getBody();
-   Logger.getGlobal().info(\"       .... got \n\" + body);
    Map<String, Object> objectMap = Yaml.decode(body);
    for (Object obj : objectMap.values()) {
       apply((Event) obj);
@@ -273,7 +271,6 @@ try {
          .post(\"http://localhost:42000/publish\")
          .body(json)
          .asString();
-   System.out.println(response.getBody());
 }
 catch (UnirestException e) {
    e.printStackTrace();
