--- a/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
@@ -163,8 +163,8 @@ Logger.getGlobal().info(\"Shop service is up and running on port \" + port);
    String events = Yaml.encode(getHistory().values().toArray());
    String objects = Yaml.encode(model.getModelMap().values().toArray());
    return \"<p id='Shop'>This is the Shop service. </p>\n\" +
-         \"<pre>\" + events + \"</pre>\n\" +
-         \"<pre>\" + objects + \"</pre>\n\" +
+         \"<pre id=\\"history\\">\" + events + \"</pre>\n\" +
+         \"<pre id=\\"data\\">\" + objects + \"</pre>\n\" +
          \"\";
 }
 catch (Exception e) {
