--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -163,8 +163,8 @@ Logger.getGlobal().info(\"Storage service is up and running on port \" + port);
    String events = Yaml.encode(getHistory().values().toArray());
    String objects = Yaml.encode(model.getModelMap().values().toArray());
    return \"<p id='Storage'>This is the Storage service. </p>\n\" +
-         \"<pre>\" + events + \"</pre>\n\" +
-         \"<pre>\" + objects + \"</pre>\n\" +
+         \"<pre id=\\"history\\">\" + events + \"</pre>\n\" +
+         \"<pre id=\\"data\\">\" + objects + \"</pre>\n\" +
          \"\";
 }
 catch (Exception e) {
