checking data states

--- a/test/src/test/java/uks/debuggen/shop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/shop/classModel.yaml
@@ -9,8 +9,8 @@
 
 - testSomeEventStorming: 	org.fulib.classmodel.Clazz
   attributes: 	testSomeEventStorming_eventBroker
-  importList: 	"import org.junit.Test;" 	"import uks.debuggen.shop.events.*;" 	"import uks.debuggen.shop.Shop.ShopService;" 	"import uks.debuggen.shop.someservice.someserviceService;" 	"import uks.debuggen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import com.codeborne.selenide.Condition;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import uks.debuggen.shop.events.*;" 	"import uks.debuggen.shop.Shop.ShopService;" 	"import uks.debuggen.shop.someservice.someserviceService;" 	"import uks.debuggen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import com.codeborne.selenide.Condition;" 	"import com.codeborne.selenide.SelenideElement;"
+  importList: 	"import org.junit.Test;" 	"import uks.debuggen.shop.events.*;" 	"import uks.debuggen.shop.Shop.ShopService;" 	"import uks.debuggen.shop.someservice.someserviceService;" 	"import uks.debuggen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import uks.debuggen.shop.events.*;" 	"import uks.debuggen.shop.Shop.ShopService;" 	"import uks.debuggen.shop.someservice.someserviceService;" 	"import uks.debuggen.shop.Storage.StorageService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import com.codeborne.selenide.SelenideElement;"
   methods: 	testSomeEventStorming_SomeEventStorming 	testSomeEventStorming_publish
   model: 	c
   modified: 	false
@@ -56,12 +56,12 @@ StorageService storage = new StorageService();
 storage.start();
 
 open(\"http://localhost:42000\");
-$(\"body\").shouldHave(Condition.text(\"event broker\"));
+$(\"body\").shouldHave(text(\"event broker\"));
 
 SelenideElement pre = $(\"pre\");
-pre.shouldHave(Condition.text(\"http://localhost:42100/apply\"));
-pre.shouldHave(Condition.text(\"http://localhost:42002/apply\"));
-pre.shouldHave(Condition.text(\"http://localhost:42003/apply\"));
+pre.shouldHave(text(\"http://localhost:42100/apply\"));
+pre.shouldHave(text(\"http://localhost:42002/apply\"));
+pre.shouldHave(text(\"http://localhost:42003/apply\"));
 
 // workflow working smoothly
 // create ProductStored: product stored 12:00
@@ -71,6 +71,29 @@ e1200.setBox(\"box23\");
 e1200.setProduct(\"shoes\");
 e1200.setPlace(\"shelf23\");
 publish(e1200);
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_00:\"));
+
+// check someservice
+open(\"http://localhost:42002\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_00:\"));
+// check data note 12:01
+pre = $(\"#data\");
+pre.shouldHave(text(\"- box23:\"));
+pre.shouldHave(text(\"product: shoes\"));
+pre.shouldHave(text(\"place: shelf23\"));
+
+// check Storage
+open(\"http://localhost:42003\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_00:\"));
+// check data note 12:02
+pre = $(\"#data\");
+pre.shouldHave(text(\"- box23:\"));
+pre.shouldHave(text(\"product: shoes\"));
+pre.shouldHave(text(\"place: shelf23\"));
 
 // create OrderRegistered: order registered 13:01
 OrderRegistered e1301 = new OrderRegistered();
@@ -80,6 +103,31 @@ e1301.setProduct(\"shoes\");
 e1301.setCustomer(\"Alice\");
 e1301.setAddress(\"Wonderland 1\");
 publish(e1301);
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_01:\"));
+
+// check Shop
+open(\"http://localhost:42100\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_01:\"));
+// check data note 13:06
+pre = $(\"#data\");
+pre.shouldHave(text(\"- order1300:\"));
+pre.shouldHave(text(\"state: picking\"));
+
+// check Storage
+open(\"http://localhost:42003\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_01:\"));
+// check data note 13:04
+pre = $(\"#data\");
+pre.shouldHave(text(\"- pick1300:\"));
+pre.shouldHave(text(\"order: order1300\"));
+pre.shouldHave(text(\"product: shoes\"));
+pre.shouldHave(text(\"customer: Alice\"));
+pre.shouldHave(text(\"address: \\"Wonderland 1\\"\"));
+pre.shouldHave(text(\"state: todo\"));
 
 // create OrderPicked: order picked 14:00
 OrderPicked e1400 = new OrderPicked();
@@ -88,6 +136,32 @@ e1400.setPickTask(\"pick1300\");
 e1400.setBox(\"box23\");
 e1400.setUser(\"Bob\");
 publish(e1400);
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 14_00:\"));
+
+// check Storage
+open(\"http://localhost:42003\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 14_00:\"));
+// check data note 14:01
+pre = $(\"#data\");
+pre.shouldHave(text(\"- pick1300:\"));
+pre.shouldHave(text(\"state: done\"));
+pre.shouldHave(text(\"box: box23\"));
+// check data note 14:02
+pre = $(\"#data\");
+pre.shouldHave(text(\"- box23:\"));
+pre.shouldHave(text(\"place: shipping\"));
+
+// check Shop
+open(\"http://localhost:42100\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 14_00:\"));
+// check data note 14:03
+pre = $(\"#data\");
+pre.shouldHave(text(\"- order1300:\"));
+pre.shouldHave(text(\"state: shipping\"));
 
 // workflow OrderOutOfStocks
 // create OrderRegistered: order registered 13:11
@@ -98,6 +172,23 @@ e1311.setProduct(\"tshirt\");
 e1311.setCustomer(\"Alice\");
 e1311.setAddress(\"Wonderland 1\");
 publish(e1311);
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_11:\"));
+
+// check Shop
+open(\"http://localhost:42100\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_11:\"));
+// check data note 13:12
+pre = $(\"#data\");
+pre.shouldHave(text(\"- order1310:\"));
+pre.shouldHave(text(\"state: \\"out of stock\\"\"));
+
+// check Storage
+open(\"http://localhost:42003\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 13_11:\"));
 
 System.out.println();
 "
