--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -265,6 +265,8 @@ if (event.getId().equals(\"13:01\")) {
    pick1300.setState(\"todo\");
 
    OrderApproved e1305 = new OrderApproved();
+
+   e1305.setId(\"13:05\");
    e1305.setEvent(\"order approved 13:05\");
    e1305.setOrder(\"order1300\");
    publish(e1305);
@@ -272,6 +274,8 @@ if (event.getId().equals(\"13:01\")) {
 if (event.getId().equals(\"13:11\")) {
 
    OrderDeclined e1314 = new OrderDeclined();
+
+   e1314.setId(\"13:14\");
    e1314.setEvent(\"order declined 13:14\");
    e1314.setOrder(\"order1310\");
    publish(e1314);
